--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -9,28 +9,30 @@
 
 <body>
     <form name="calcform">
-        <input type="text" name="text1" placeholder="0"> </br>
-        <input type="button" name="btn7" value="7">
-        <input type="button" name="btn8" value="8">
-        <input type="button" name="btn9" value="9">
-        <input type="button" name="btn/" value="/"> </br>
+        <input type="text" id="buttonDisplay" name="text1" placeholder="0"> </br>
+        <input type="button" class="button" name="btn7" value="7">
+        <input type="button" class="button" name="btn8" value="8">
+        <input type="button" class="button" name="btn9" value="9">
+        <input type="button" class="button" name="btn/" value="/"> </br>
 
-        <input type="button" name="btn4" value="4">
-        <input type="button" name="btn5" value="5">
-        <input type="button" name="btn6" value="6">
-        <input type="button" name="btn*" value="*"> </br>
+        <input type="button" class="button" name="btn4" value="4">
+        <input type="button" class="button" name="btn5" value="5">
+        <input type="button" class="button" name="btn6" value="6">
+        <input type="button" class="button" name="btn*" value="*"> </br>
 
-        <input type="button" name="btn1" value="1">
-        <input type="button" name="btn2" value="2">
-        <input type="button" name="btn3" value="3">
-        <input type="button" name="btn-" value="-"> </br>
+        <input type="button" class="button" name="btn1" value="1">
+        <input type="button" class="button" name="btn2" value="2">
+        <input type="button" class="button" name="btn3" value="3">
+        <input type="button" class="button" name="btn-" value="-"> </br>
 
-        <input type="button" name="btn0" value="0">
-        <input type="button" name="btnPrzecinek" value=",">
-        <input type="button" name="btn+" value="+">
-        <input type="button" name="btn=" value="=" </form>
+        <input type="button" class="button" name="btn0" value="0">
+        <input type="button" class="button" name="btnPrzecinek" value=",">
+        <input type="button" class="button" name="btn+" value="+">
+        <input type="button" class="button" name="btn=" value="=">
+        <input type="reset" value="C">   
+    </form>
 
-        <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
 
 </html>
